# quant

./: .env  .gitignore  .gitmodules  ACCOUNT_DATA_FLOW.md  ACCOUNT_UPDATE_IMPLEMENTATION.md  ADAPTER_ACCOUNT_UPDATE_GUIDE.md  ENHANCED_DATA_PROCESSING.md  JVQUANT_TRADE_API_SPEC.md  QUERY_API_IMPLEMENTATION.md  README.md  README_Cache_System.md  README_Extreme_Detection_Improvement.md  README_Live_Trading.md  README_Memory_Optimization.md  README_Strategy_Reverse_Engineering.md  README_TRADING_LOGIN.md  adapter_connection_manager.py  analyze_data.py  analyze_file_naming.py  balance_api_comparison.md  calculate_minute_volume.py  collect_1min.bat  collect_tick.bat  collect_tick_only.py  convert_stock_data_to_catalog.py  download_etf_minute_data.py  download_sample_data.py  ema_comparison.py  ema_python.py  email_notifier.py  etf_159506_adapter.py  etf_159506_cache_collector.py  etf_159506_cache_strategy.py  etf_159506_catalog_loader.py  etf_159506_data_classes.py  etf_159506_data_client_config.py  etf_159506_data_manager.py  etf_159506_data_saver.py  etf_159506_enhanced_risk_manager.py  etf_159506_execution_algorithms.py  (+51 more)
.cursor/rules/: project-rule.mdc
data/: 159506_1min.parquet
data/equity_cache/: AAPL_1y.json
data/macro/: A191RL1Q225SBEA.json  CPIAUCSL.json  CPILFESL.json  DGS10.json  FEDFUNDS.json  ICSA.json  NAPM.json  PAYEMS.json  RSAFS.json  UMCSENT.json  UNRATE.json  VIXCLS.json
docs/: ml_learning_curriculum.md  ml_learning_notes.md
kline-viewer/: api.py  app.py  equity_explorer.py  macro.py  ml_api.py  package.json  pnpm-lock.yaml  realtime.py
kline-viewer/frontend/: index.html  package.json  patch_kline.mjs  vite.config.ts
kline-viewer/frontend/src/: App.vue  style.css
kline-viewer/frontend/src/components/: EquityExplorer.vue  KlineChart.vue  MLDashboard.vue  MacroDashboard.vue
kline-viewer/frontend/src/types/: api.d.ts  pywebview.d.ts
models/: feature_analysis_report.txt  lgbm_signal.txt  xgb_signal.json  xgb_signal_meta.joblib
sample/: demo_catalog_usage.py
tests/: test_custom_data_source.py  test_integrated_system.py  test_jvquant_connection.py
