[project]
name = "jvquant-realtime-system"
version = "0.1.0"
description = "jvQuant实时技术指标计算系统"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "requests>=2.28.0",
    "websocket-client>=1.4.0",
    "aiohttp>=3.8.0",
    "pandas>=1.5.0",
    "numpy>=1.21.0",
    "matplotlib>=3.5.0",
    "mplfinance>=0.12.0",
    "python-dateutil>=2.8.0",
    "nautilus-trader",
    "seaborn>=0.13.2",
    "redis",
    "pyarrow>=20.0.0",
    "pytz>=2025.2",
    "psutil>=5.9.0",
    "akshare>=1.18.49",
    "baostock>=0.8.9",
    "efinance>=0.5.8",
    "pytdx>=1.72",
    "pywebview>=6.1",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "fredapi>=0.5.2",
    "scikit-learn>=1.5",
    "xgboost>=2.1",
    "lightgbm>=4.5",
    "shap>=0.46",
    "joblib>=1.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

# 本地源码安装需 Clang（见 nautilus_trader/build.py）。Windows：安装 LLVM 后确保 `clang` 在 PATH。
[tool.uv.sources]
nautilus-trader = { path = "nautilus_trader", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["."]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
] 
